public class Pembeli {
    private String namaPembeli;
    private String email;

    public Pembeli(String namaPembeli, String email) {
        this.namaPembeli = namaPembeli;
        this.email = email;
    }

    public String getNamaPembeli() {
        return namaPembeli;
    }

    public String getEmail() {
        return email;
    }
}
