import java.util.Date;

public class Pemesanan {
    private Date tanggalPemesanan;
    protected int jumlahTiket;
    protected double totalHarga;

    public Pemesanan(Date tanggalPemesanan, int jumlahTiket) {
        this.tanggalPemesanan = tanggalPemesanan;
        this.jumlahTiket = jumlahTiket;
        this.totalHarga = totalHarga;
    }

}
